# ros2_finalexam

./: .gitignore  README.md  frames_2026-04-21_15.14.37.gv
src/finalexam_ros/: .gitignore  README.md  Red  package.xml  setup.cfg  setup.py
src/finalexam_ros/config/: controllers.yaml  joint_names_final.yaml  view_robot.rviz
src/finalexam_ros/finalexam_ros/: arm_incremental_teleop.py  imu_reader.py  keyboard_teleop.py
src/finalexam_ros/launch/: display.launch.py  gazebo.launch.py
src/finalexam_ros/meshes/: base_link.STL  fix_arm.STL  imu.STL  joint2.STL  joint_1.STL  lidar.STL
src/finalexam_ros/urdf/: final.csv  final.urdf  okiii.urdf
src/finalexam_ros/worlds/: my_map.world
